# PaperSpider

./: .gitignore  NOTICE  PaperSpider.spec  README.md  README.zh.md  app.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
docs/: ccf_a_conference_research.md  en.md  zh.md
paper_spider/: __init__.py  __main__.py  artifacts.py  export_utils.py  filtering.py  models.py  storage.py  workspace_service.py
paper_spider/conferences/: __init__.py  aaai.py  acl.py  atc.py  author_utils.py  base.py  cvpr.py  emnlp.py  family_base.py  fast.py  iccv.py  iclr.py  icml.py  ijcai.py  naacl.py  ndss.py  neurips.py  nsdi.py  osdi.py  request_base.py  sigcomm.py  usenix_security.py  vldb.py
paper_spider/ui/: dataset_dialog.py  dialog_utils.py  export_dialog.py  main_window.py  paper_table_model.py  settings_dialog.py  theme.py  (+5 more)
tests/: test_aaai_conference.py  test_artifacts.py  test_author_utils.py  test_conference_registry.py  test_cvpr_conference.py  test_dialog_utils.py  test_emnlp_conference.py  test_export_utils.py  test_family_conferences.py  test_fast_conference.py  test_iccv_conference.py  test_iclr_conference.py  test_icml_conference.py  test_ijcai_conference.py  test_ndss_conference.py  test_nsdi_conference.py  test_packaging.py  test_paper_table_model.py  test_request_base.py  test_sigcomm_conference.py  test_storage.py  test_ui_dialogs.py  test_usenix_security_conference.py  test_vldb_conference.py  test_workspace_filters.py  test_workspace_service.py  test_workspace_view_helpers.py  test_workspace_widgets.py  test_workspace_window_ui.py
(+2 files in other folders)
