[project]
name = "paperspider"
version = "0.1.0"
description = "Minimal UI tool to fetch NeurIPS papers"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Isaacveg" }]
keywords = ["papers", "scraper", "neurips", "pyqt", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "PyQt6>=6.6.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
]

[project.scripts]
paperspider = "paper_spider.__main__:main"

[project.urls]
Repository = "https://github.com/isaacveg/PaperSpider"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["paper_spider", "paper_spider.conferences", "paper_spider.ui"]
